Update Gemini-VQA metric

--- a/evaluate_VQA.ipynb
+++ b/evaluate_VQA.ipynb
@@ -15,12 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "83cd0fc5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "API_KEY = \"AIzaSyCVKglf25I8C6A_jhNPZOoApHZQzFDKtw4\"\n",
+    "API_KEY = \"YOUR API_KEY\"\n",
     "MODEL_NAME = \"gemini-2.5-flash-lite\"\n",
     "\n",
     "PROMPT_TEMPLATE = \"\"\"\n",
